--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>TCx</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
-    <title>TCx</title>
+    <link rel="stylesheet" href="styles/index.css" />
+    <script src="scripts/index.js" defer></script>
   </head>
   <body>
     <div class="root">
       <!-- NAV START -->
       <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-          <a class="navbar-item" href="index.html">
-            <img src="./assets/tc-logo-long-wl.png" />
+          <a class="navbar-item" href="/">
+            <img src="assets/tc-logo-long-wl.png" />
           </a>
 
           <a
@@ -31,10 +32,8 @@
 
         <div id="navbarBasicExample" class="navbar-menu">
           <div class="navbar-start">
-            <a class="navbar-item" href="./docs.html">Docs</a>
-            <a class="navbar-item" href="./views/members/members.html"
-              >Members</a
-            >
+            <a class="navbar-item" href="/">Docs</a>
+            <a class="navbar-item" href="/members">Members</a>
             <div class="navbar-item has-dropdown is-hoverable">
               <!-- <a class="navbar-link">Lists</a>
               <div class="navbar-dropdown">
@@ -58,16 +57,20 @@
           flex-column
         "
       >
-        <h1 class="title is-1 has-text-white">Title</h1>
+        <h1 class="title is-1 has-text-white">
+          To <s class="has-text-danger">See</s
+          ><em class="has-text-success">Change</em> the World
+        </h1>
         <div
           class="
+            appear
             isometric-card
             d-flex
             justify-content-center
             align-items-center
           "
         >
-          <img src="./assets/tc-logo-min.png" class="rotate-half" alt="" />
+          <img src="assets/tc-logo-min.png" class="rotate-half" alt="" />
         </div>
       </main>
     </div>
